--- a/frontend/monthly_statement.html
+++ b/frontend/monthly_statement.html
@@ -28,6 +28,7 @@
 <script>
 const monthSelect = document.getElementById('month');
 const yearSelect = document.getElementById('year');
+let tagValues = {};
 
 fetch('../php_backend/public/transaction_months.php')
     .then(resp => resp.json())
@@ -72,22 +73,57 @@ form.addEventListener('submit', function(e) {
     e.preventDefault();
     const month = monthSelect.value;
     const year = yearSelect.value;
-    fetch('../php_backend/public/transactions.php?month=' + month + '&year=' + year)
-        .then(resp => resp.json())
-        .then(data => {
-            new Tabulator('#transactions-grid', {
-                data: data,
-                layout: 'fitColumns',
-                columns: [
-                    { title: 'Date', field: 'date' },
-                    { title: 'Description', field: 'description' },
-                    { title: 'Category', field: 'category_name' },
-                    { title: 'Tag', field: 'tag_name' },
-                    { title: 'Group', field: 'group_name' },
-                    { title: 'Amount', field: 'amount', formatter: 'money', formatterParams: { symbol: '£', precision: 2 }, hozAlign: 'right' }
-                ]
-            });
+    Promise.all([
+        fetch('../php_backend/public/transactions.php?month=' + month + '&year=' + year).then(r => r.json()),
+        fetch('../php_backend/public/tags.php').then(r => r.json())
+    ]).then(([data, tags]) => {
+        tagValues = {};
+        tags.forEach(t => { tagValues[t.id] = t.name; });
+        tagValues['__new'] = 'Add New Tag...';
+
+        new Tabulator('#transactions-grid', {
+            data: data,
+            layout: 'fitColumns',
+            columns: [
+                { title: 'Date', field: 'date' },
+                { title: 'Description', field: 'description' },
+                { title: 'Category', field: 'category_name' },
+                {
+                    title: 'Tag',
+                    field: 'tag_id',
+                    editor: 'select',
+                    editorParams: { values: tagValues },
+                    formatter: function(cell) { return tagValues[cell.getValue()] || ''; }
+                },
+                { title: 'Group', field: 'group_name' },
+                { title: 'Amount', field: 'amount', formatter: 'money', formatterParams: { symbol: '£', precision: 2 }, hozAlign: 'right' }
+            ],
+            cellEdited: function(cell) {
+                if (cell.getField() === 'tag_id') {
+                    const val = cell.getValue();
+                    const data = cell.getRow().getData();
+                    if (val === '__new') {
+                        const name = prompt('Enter new tag name:');
+                        if (!name) {
+                            cell.setValue(data.tag_id, true);
+                            return;
+                        }
+                        fetch('../php_backend/public/update_transaction_tag.php', {
+                            method: 'POST',
+                            headers: { 'Content-Type': 'application/json' },
+                            body: JSON.stringify({ transaction_id: data.id, account_id: data.account_id, tag_name: name })
+                        }).then(() => form.dispatchEvent(new Event('submit')));
+                    } else {
+                        fetch('../php_backend/public/update_transaction_tag.php', {
+                            method: 'POST',
+                            headers: { 'Content-Type': 'application/json' },
+                            body: JSON.stringify({ transaction_id: data.id, account_id: data.account_id, tag_id: val })
+                        }).then(() => form.dispatchEvent(new Event('submit')));
+                    }
+                }
+            }
         });
+    });
 });
 </script>
     <script src="js/overlay.js"></script>
