--- a/frontend/monthly_statement.html
+++ b/frontend/monthly_statement.html
@@ -28,6 +28,8 @@
 <script>
 const monthSelect = document.getElementById('month');
 const yearSelect = document.getElementById('year');
+let tagOptions = [];
+let tagLookup = {};
 
 fetch('../php_backend/public/transaction_months.php')
     .then(resp => resp.json())
@@ -72,22 +74,74 @@ form.addEventListener('submit', function(e) {
     e.preventDefault();
     const month = monthSelect.value;
     const year = yearSelect.value;
-    fetch('../php_backend/public/transactions.php?month=' + month + '&year=' + year)
-        .then(resp => resp.json())
-        .then(data => {
-            new Tabulator('#transactions-grid', {
-                data: data,
-                layout: 'fitColumns',
-                columns: [
-                    { title: 'Date', field: 'date' },
-                    { title: 'Description', field: 'description' },
-                    { title: 'Category', field: 'category_name' },
-                    { title: 'Tag', field: 'tag_name' },
-                    { title: 'Group', field: 'group_name' },
-                    { title: 'Amount', field: 'amount', formatter: 'money', formatterParams: { symbol: '£', precision: 2 }, hozAlign: 'right' }
-                ]
-            });
+    Promise.all([
+        fetch('../php_backend/public/transactions.php?month=' + month + '&year=' + year).then(r => r.json()),
+        fetch('../php_backend/public/tags.php').then(r => r.json())
+    ]).then(([data, tags]) => {
+        tagOptions = [];
+        tagLookup = {};
+        tags.forEach(t => {
+            tagOptions.push({ value: t.id, label: t.name });
+            tagLookup[t.id] = t.name;
         });
+        tagOptions.push({ value: '__new', label: 'Add New Tag...' });
+
+        new Tabulator('#transactions-grid', {
+            data: data,
+            layout: 'fitColumns',
+            columns: [
+                { title: 'Date', field: 'date' },
+                { title: 'Description', field: 'description' },
+                { title: 'Category', field: 'category_name' },
+                {
+                    title: 'Tag',
+                    field: 'tag_id',
+                    editor: 'list',
+                    editorParams: { values: tagOptions },
+                    formatter: function(cell) {
+                        return tagLookup[cell.getValue()] || '';
+                    }
+                },
+                { title: 'Group', field: 'group_name' },
+                { title: 'Amount', field: 'amount', formatter: 'money', formatterParams: { symbol: '£', precision: 2 }, hozAlign: 'right' }
+            ],
+            cellEdited: function(cell) {
+                if (cell.getField() === 'tag_id') {
+                    const val = cell.getValue();
+                    const data = cell.getRow().getData();
+                    const payload = { transaction_id: data.id, account_id: data.account_id, description: data.description };
+                    if (val === '__new') {
+                        const name = prompt('Enter new tag name:');
+                        if (!name) {
+                            cell.setValue(data.tag_id, true);
+                            return;
+                        }
+                        payload.tag_name = name;
+                    } else {
+                        payload.tag_id = val;
+                    }
+                    fetch('../php_backend/public/update_transaction_tag.php', {
+                        method: 'POST',
+                        headers: { 'Content-Type': 'application/json' },
+                        body: JSON.stringify(payload)
+                    })
+                    .then(resp => resp.json())
+                    .then(res => {
+                        if (res && res.status === 'ok') {
+                            form.dispatchEvent(new Event('submit'));
+                        } else {
+                            alert('Failed to save tag');
+                            cell.setValue(data.tag_id, true);
+                        }
+                    })
+                    .catch(() => {
+                        alert('Failed to save tag');
+                        cell.setValue(data.tag_id, true);
+                    });
+                }
+            }
+        });
+    });
 });
 </script>
     <script src="js/overlay.js"></script>
