Add all years dashboard

--- a/frontend/menu.html
+++ b/frontend/menu.html
@@ -4,6 +4,7 @@
     <li><a href="index.html"><i class="fa-solid fa-house"></i> Home</a></li>
     <li><a href="upload.html"><i class="fa-solid fa-upload"></i> Upload OFX File</a></li>
     <li><a href="yearly_dashboard.html"><i class="fa-solid fa-chart-line"></i> Yearly Dashboard</a></li>
+    <li><a href="all_years_dashboard.html"><i class="fa-solid fa-chart-bar"></i> All Years Dashboard</a></li>
     <li><a href="monthly_dashboard.html"><i class="fa-solid fa-chart-column"></i> Monthly Dashboard</a></li>
     <li><a href="monthly_statement.html"><i class="fa-solid fa-file-invoice-dollar"></i> View Monthly Statement</a></li>
     <li><a href="report.html"><i class="fa-solid fa-table"></i> Transaction Reports</a></li>
