--- a/frontend/yearly_dashboard.html
+++ b/frontend/yearly_dashboard.html
@@ -25,6 +25,9 @@
             <div id="categories-table"></div>
             <div id="categories-chart" style="height:400px"></div>
 
+            <h2>Category & Tag Breakdown</h2>
+            <div id="category-tag-donut" style="height:400px"></div>
+
             <h2>Group Totals</h2>
             <div id="groups-table"></div>
             <div id="groups-chart" style="height:400px"></div>
@@ -80,6 +83,34 @@
         });
     }
 
+    function buildDonutChart(id, categories, tags){
+        Highcharts.chart(id, {
+            chart: { type: 'pie' },
+            title: { text: 'Categories and Tags' },
+            tooltip: { pointFormatter: function(){ return '£' + Highcharts.numberFormat(this.y, 2); } },
+            plotOptions: {
+                pie: {
+                    dataLabels: {
+                        formatter: function(){ return this.point.name + ': £' + Highcharts.numberFormat(this.y, 2); }
+                    }
+                }
+            },
+            series: [
+                {
+                    name: 'Categories',
+                    data: categories.map(c => ({ name: c.name, y: parseFloat(c.total) })),
+                    size: '60%'
+                },
+                {
+                    name: 'Tags',
+                    data: tags.map(t => ({ name: t.name, y: parseFloat(t.total) })),
+                    size: '80%',
+                    innerSize: '60%'
+                }
+            ]
+        });
+    }
+
     function loadYear(year){
         fetch('../php_backend/public/yearly_dashboard.php?year=' + year)
             .then(resp => resp.json())
@@ -88,6 +119,7 @@
                 buildChart('tags-chart', 'Tag Totals ' + year, data.tags);
                 buildTable('categories-table', data.categories);
                 buildChart('categories-chart', 'Category Totals ' + year, data.categories);
+                buildDonutChart('category-tag-donut', data.categories, data.tags);
                 buildTable('groups-table', data.groups);
                 buildChart('groups-chart', 'Group Totals ' + year, data.groups);
             });
